@@ -10,3 +10,4 @@
 2023-12-18 - V3.2.0 - JSONPOST support added (see web-tests)
                       broken web tests now have full url in error report
 2023-12-19 - V3.2.1 - alerting improved. "--alert" option added
+2023-12-27 - V3.2.2 - web-tests: support for content-encdoding: zstd,gzip,brotli; content-type (autodecoding): json,msgpack,igbinary - see web-tests/examples
